--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+#Database credentials and connection
 
+spring.datasource.url=jdbc:mysql://localhost:3306/CatalogDB?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=se06
+
+spring.jba.properties.hibernate.dialect=org.hibernate.dialect.MySQL80Dialect
+spring.jpa.database=mysql
+
+
+#If None, then this disables the hbm2ddl.auto tool, so that hibernate does not try to manage the underlying database schema.
+#If create-only, then this creates the schema based on the entity model.
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+#This makes hibernate log all the generated SQL statements to the console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
