added Composefile for catalog

--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Database credentials and connection
 
-spring.datasource.url=jdbc:mysql://localhost:3306/CatalogDB?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://catalogsql:3306/CatalogDB?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=se06
 
