--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -17,3 +17,17 @@ spring.jpa.hibernate.ddl-auto=update
 #This makes hibernate log all the generated SQL statements to the console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+#Kafka config:
+spring.kafka.consumer.bootstrap-servers: broker:9092
+spring.kafka.consumer.group-id: Catalog
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
+kafka.topic: Catalog-topic
+
+spring.kafka.producer.bootstrap-servers: broker:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
