lots of stuff, im good at commits

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Catalog</module>
         <module>auction-common</module>
         <module>Biddingservice</module>
+        <module>Account</module>
     </modules>
 
 </project>
