--- a/Biddingservice/src/main/resources/application.properties
+++ b/Biddingservice/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 spring.kafka.consumer.bootstrap-servers: broker:9092
 spring.kafka.consumer.group-id: Bidding-Service
 spring.kafka.consumer.auto-offset-reset: earliest
-spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
 kafka.topic: NewBid
 
 spring.kafka.producer.bootstrap-servers: broker:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
