--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -24,10 +24,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.kafka.consumer.bootstrap-servers: broker:9092
 spring.kafka.consumer.group-id: Catalog
 spring.kafka.consumer.auto-offset-reset: earliest
-spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
-kafka.topic: Catalog-topic
+kafka.topic.new: Catalog-topic
+Kafka.topic.processed: Catalog-processed-topic
 
 spring.kafka.producer.bootstrap-servers: broker:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
