--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -18,3 +18,16 @@ spring.jpa.hibernate.ddl-auto=update
 #This makes hibernate log all the generated SQL statements to the console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Kafka config:
+spring.kafka.consumer.bootstrap-servers: localhost:9092
+spring.kafka.consumer.group-id: Account
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
+kafka.topic.new: Account-topic
+Kafka.topic.processed: Account-processed-topic
+
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
+spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
