--- a/Biddingservice/src/main/resources/application.properties
+++ b/Biddingservice/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
 kafka.topic: NewBid
+kafka.topic.account.processed: Account-processed-topic
 
 spring.kafka.producer.bootstrap-servers: broker:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
