--- a/Catalog/pom.xml
+++ b/Catalog/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>Catalog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Catalog</name>
-	<description>Catalog for auctionhouse</description>
+	<description>Catalog for auction-house</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -49,10 +49,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
 		</dependency>
         <dependency>
             <groupId>sdu.se06</groupId>
