added new bid endpoint

--- a/Biddingservice/src/main/resources/application.properties
+++ b/Biddingservice/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.kafka.consumer.group-id: Bidding-Service
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
-kafka.topic: NewBid
+kafka.topic.new.bid: NewBid
 kafka.topic.account.processed: Account-processed-topic
 
 spring.kafka.producer.bootstrap-servers: broker:9092
