--- a/Biddingservice/src/main/resources/application.properties
+++ b/Biddingservice/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Int
 spring.kafka.consumer.value-deserializer=sdu.se06.auctioncommon.Model.BidRequestDeserializer
 kafka.topic.new.bid=NewBid
 kafka.topic.account.processed=Account-processed-topic
+kafka.topic.Catalog.processed=Catalog-processed-topic
+kafka.topic.Catalog.finished=BidSagaDone
 spring.kafka.producer.bootstrap-servers=broker:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
