--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -28,6 +28,8 @@ spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.In
 spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
 kafka.topic.new: Catalog-topic
 Kafka.topic.processed: Catalog-processed-topic
+kafka.topic.update: Catalog-update-topic
+kafka.topic.finished: BidSagaDone
 
 spring.kafka.producer.bootstrap-servers: broker:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
