added gateway to project pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>auction-common</module>
         <module>Biddingservice</module>
         <module>Account</module>
+        <module>Gateway</module>
     </modules>
 
 </project>
