--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 #Kafka config:
-spring.kafka.consumer.bootstrap-servers: broker:9092
+spring.kafka.properties.bootstrap.servers: broker:9092
 spring.kafka.consumer.group-id: Account
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
@@ -28,6 +28,5 @@ spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidReques
 kafka.topic.new: Account-topic
 Kafka.topic.processed: Account-processed-topic
 
-spring.kafka.producer.bootstrap-servers: broker:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
