--- a/Biddingservice/src/main/resources/application.properties
+++ b/Biddingservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.consumer.bootstrap-servers=broker:9092
+spring.kafka.properties.bootstrap.servers=broker:9092
 spring.kafka.consumer.group-id=Bidding-Service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
@@ -7,6 +7,6 @@ kafka.topic.new.bid=NewBid
 kafka.topic.account.processed=Account-processed-topic
 kafka.topic.Catalog.processed=Catalog-processed-topic
 kafka.topic.Catalog.finished=BidSagaDone
-spring.kafka.producer.bootstrap-servers=broker:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
+
