--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 #Kafka config:
-spring.kafka.consumer.bootstrap-servers: broker:9092
+spring.kafka.properties.bootstrap.servers: broker:9092
 spring.kafka.consumer.group-id: Catalog
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
@@ -31,6 +31,5 @@ Kafka.topic.processed: Catalog-processed-topic
 kafka.topic.update: Catalog-update-topic
 kafka.topic.finished: BidSagaDone
 
-spring.kafka.producer.bootstrap-servers: broker:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
