added rollback capabilities for account

--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -26,7 +26,8 @@ spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidRequestDeserializer
 kafka.topic.new: Account-topic
-Kafka.topic.processed: Account-processed-topic
+kafka.topic.processed: Account-processed-topic
+kafka.bid-rejected-topic: bid-rejected-topic
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
