--- a/Biddingservice/src/main/resources/application.properties
+++ b/Biddingservice/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.kafka.consumer.value-deserializer=sdu.se06.auctioncommon.Model.BidRequest
 kafka.topic.new.bid=NewBid
 kafka.topic.account.processed=Account-processed-topic
 kafka.topic.Catalog.processed=Catalog-processed-topic
-kafka.topic.Catalog.finished=BidSagaDone
+kafka.topic.Catalog.finished=Catalog-finished-topic
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
 
