--- a/Catalog/src/main/resources/application.properties
+++ b/Catalog/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.kafka.consumer.value-deserializer: sdu.se06.auctioncommon.Model.BidReques
 kafka.topic.new: Catalog-topic
 Kafka.topic.processed: Catalog-processed-topic
 kafka.topic.update: Catalog-update-topic
-kafka.topic.finished: BidSagaDone
+kafka.topic.finished: Catalog-finished-topic
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=sdu.se06.auctioncommon.Model.BidRequestSerializer
