--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -2,27 +2,27 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: frontend_to_catalog_listing_post_route
-          uri: localhost:8081
+        - id: frontend_to_catalog_listing_route
+          uri: http://localhost:8081
           predicates:
-            - Method=POST, GET
-            - Path=/api/v1/listings/**
+            - Path=/api/v1/listings/
+
+        - id: frontend_to_catalog_listing_route
+          uri: http://localhost:8081
+          predicates:
+            - Path=/api/v1/listings/
 
         - id: frontend_to_catalog_listing_get_route
-          uri: localhost:8081
+          uri: http://localhost:8081
           predicates:
-            - Method=GET
             - Path=/api/v1/listing/**
 
         - id: create_account_post
-          uri: localhost:8082
+          uri: http://localhost:8082
           predicates:
-            - METHOD=POST
             - Path=/accounts/
 
-
         - id: new_bid_post
-          uri: localhost:8083
+          uri: http://localhost:8083
           predicates:
-            - METHOD=POST
             - Path=/bid/newbid
