updated docker-compose to run the application

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -7,8 +7,8 @@ events {
 http {
 
     server {
-        listen 8080;
-        server_name proxy;
+        listen 8080 default_server;
+        server_name nginxservice;
 
         location /bid/newbid {
         proxy_pass         http://biddingservice:8080/bid/newbid;
