--- a/Catalog/pom.xml
+++ b/Catalog/pom.xml
@@ -50,11 +50,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>sdu.se06</groupId>
-            <artifactId>auction-common</artifactId>
-            <version>0.0.1-Snapshot</version>
-        </dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
@@ -71,7 +66,13 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.14.2</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>sdu.se06</groupId>
+			<artifactId>auction-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
