--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,86 +1,52 @@
-name: Java CI with Maven and Docker
+name: Java CI
+
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
+  auction-common:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Java JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: 17
+          distribution: adopt
 
-      - name: Install auction-common JAR to local Maven repository
-        run: mvn install:install-file -Dfile=./DataConcistency-SE06/auction-common/target/auction-common.jar -DgroupId=sdu.se06 -DartifactId=auction-common -Dversion=0.0.1-SNAPSHOT -Dpackaging=jar
-
-      - name: Build and install Bachelor project
+      - name: Build auction-common JAR
         run: mvn clean install -DskipTests
 
-      - name: Build and install Account service
-        run: mvn clean install -DskipTests -f ./Account/pom.xml
+      - name: Upload auction-common artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: auction-common
+          path: target/auction-common.jar
 
-      - name: Build and install Biddingservice
-        run: mvn clean install -DskipTests -f ./Biddingservice/pom.xml
-
-      - name: Build and install Catalog service
-        run: mvn clean install -DskipTests -f ./Catalog/pom.xml
-
-      - name: Test with Maven
-        run: mvn test
-
-  docker:
-    needs: build
+  Biddingservice:
+    needs: auction-common
     runs-on: ubuntu-latest
-    if: ${{ needs.build.result == 'success' }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Java JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: 17
+          distribution: adopt
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: Download auction-common artifact
+        uses: actions/download-artifact@v2
         with:
-          registry: ghcr.io
-          username: ${{ secrets.REGISTRY_OWNER }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          name: auction-common
+          path: target
 
-      - name: Build and push Docker image for Account service
-        uses: docker/build-push-action@v2
-        with:
-          context: ./Account
-          dockerfile: Account-Docker
-          push: true
-          tags: ghcr.io/${{ secrets.REGISTRY_OWNER }}/account-service:latest
-
-      - name: Build and push Docker image for Bidding service
-        uses: docker/build-push-action@v2
-        with:
-          context: ./Biddingservice
-          dockerfile: BiddingService
-          push: true
-          tags: ghcr.io/${{ secrets.REGISTRY_OWNER }}/bidding-service:latest
-
-      - name: Build and push Docker image for Catalog service
-        uses: docker/build-push-action@v2
-        with:
-          context: ./Catalog
-          dockerfile: catalogService
-          push: true
-          tags: ghcr.io/${{ secrets.REGISTRY_OWNER }}/catalog-service:latest
+      - name: Build Biddingservice
+        run: mvn clean install -DskipTests
