--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  auction-common:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,37 +19,13 @@ jobs:
           java-version: 17
           distribution: adopt
 
-      - name: Build auction-common JAR
-        run: mvn clean install -DskipTests
-
-      - name: Upload auction-common artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: auction-common
-          path: target/auction-common.jar
-
-  Biddingservice:
-    needs: auction-common
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: adopt
-
-      - name: Download auction-common artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: auction-common
-          path: target
-
-      - name: Install auction-common artifact to local repository
-        run: mvn install:install-file -Dfile=target/auction-common.jar -DgroupId=sdu.se06 -DartifactId=auction-common -Dversion=0.0.1-SNAPSHOT -Dpackaging=jar
+      - name: Build auction-common
+        run: |
+          cd auction-common
+          mvn clean install -DskipTests
+          cp target/auction-common.jar ../
 
       - name: Build Biddingservice
-        run: mvn clean install -DskipTests
+        run: |
+          cd Biddingservice
+          mvn clean install -DskipTests
