--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Build and Test Services
 
 on:
   push:
@@ -6,7 +6,8 @@ on:
       - main
 
 jobs:
-  build:
+  build-auction-common:
+    name: Build Auction Common
     runs-on: ubuntu-latest
 
     steps:
@@ -17,15 +18,69 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
-          distribution: adopt
+          distribution: 'adopt'
 
-      - name: Build auction-common
+      - name: Build Auction Common
         run: |
           cd auction-common
-          mvn clean install -DskipTests
-          cp target/auction-common.jar ../
+          mvn clean install
 
-      - name: Build Biddingservice
+  build-bidding-service:
+    name: Build and Test Bidding Service
+    needs: build-auction-common
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+
+      - name: Build and test Bidding Service
         run: |
-          cd Biddingservice
-          mvn clean install -DskipTests
+          cd bidding-service
+          mvn clean install
+
+  build-catalog-service:
+    name: Build and Test Catalog Service
+    needs: build-auction-common
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+
+      - name: Build and test Catalog Service
+        run: |
+          cd catalog-service
+          mvn clean install
+
+  build-account-service:
+    name: Build and Test Account Service
+    needs: build-auction-common
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+
+      - name: Build and test Account Service
+        run: |
+          cd account-service
+          mvn clean install
