--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
         run: mvn clean install --file auction-common/pom.xml
 
       - name: Build and test Bidding Service
-        run: mvn clean install --file bidding-service/pom.xml
+        run: mvn clean install --file Biddingservice/pom.xml
 
       - name: Build and test Catalog Service
-        run: mvn clean install --file catalog-service/pom.xml
+        run: mvn clean install --file Catalog/pom.xml
 
       - name: Build and test Account Service
-        run: mvn clean install --file account-service/pom.xml
+        run: mvn clean install --file Account/pom.xml
