--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,15 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
+      - name: Cache Maven dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+
       - name: Build Auction Common
         run: mvn clean install --file auction-common/pom.xml
-
-      - name: Install Auction Common in Local Repository
-        run: mvn install:install-file -Dfile=auction-common/target/auction-common-0.0.1-SNAPSHOT.jar -DgroupId=sdu.se06 -DartifactId=auction-common -Dversion=0.0.1-SNAPSHOT -Dpackaging=jar
 
       - name: Build and test Bidding Service
         run: mvn clean install --file Biddingservice/pom.xml
