--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
 
-      - name: Build and test auction-common
+      - name: Install auction-common into local Maven repository
         run: mvn clean install --file auction-common/pom.xml
 
       - name: Build and test Catalog Service
