--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,33 @@ jobs:
 
       - name: Build and test Bidding Service
         run: mvn clean install --file Biddingservice/pom.xml
+        
+  publish-docker-images:
+      name: Publish Docker Images
+      runs-on: ubuntu-latest
+      needs: build-services
+
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+
+        - name: Log in to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Build and Push Docker Image for Catalog Service
+          run: |
+            docker build -t baumann21/catalog-service:latest Catalog/
+            docker push baumann21/catalog-service:latest
+
+        - name: Build and Push Docker Image for Account Service
+          run: |
+            docker build -t baumann21/account-service:latest Account/
+            docker push baumann21/account-service:latest
+
+        - name: Build and Push Docker Image for Bidding Service
+          run: |
+            docker build -t baumann21/bidding-service:latest Biddingservice/
+            docker push baumann21/bidding-service:latest
