--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,15 +56,15 @@ jobs:
 
         - name: Build and Push Docker Image for Catalog Service
           run: |
-            docker build -t baumann21/catalog-service:latest Catalog/
+            docker build -t baumann21/catalog-service:latest Catalog/catalogService
             docker push baumann21/catalog-service:latest
 
         - name: Build and Push Docker Image for Account Service
           run: |
-            docker build -t baumann21/account-service:latest Account/
+            docker build -t baumann21/account-service:latest Account/Account-Docker
             docker push baumann21/account-service:latest
 
         - name: Build and Push Docker Image for Bidding Service
           run: |
-            docker build -t baumann21/bidding-service:latest Biddingservice/
+            docker build -t baumann21/bidding-service:latest Biddingservice/BiddingService
             docker push baumann21/bidding-service:latest
