--- a/Account/pom.xml
+++ b/Account/pom.xml
@@ -70,6 +70,12 @@
 			<version>1.18.28</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
