added small fixes for demo

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
                 proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header   X-Forwarded-Host $server_name;
 
-                }
+        }
         location /api/v1/listing/ {
                 proxy_pass         http://catalogservice:8080/api/v1/listing/;
                 proxy_redirect     off;
@@ -34,7 +34,25 @@ http {
                 proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header   X-Forwarded-Host $server_name;
 
-                }
+        }
+
+        location /accounts/generateUsers {
+                proxy_pass         http://accountservice:8080/accounts/generateUsers;
+                proxy_redirect     off;
+                proxy_set_header   X-Real-IP $remote_addr;
+                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header   X-Forwarded-Host $server_name;
+
+        }
+
+        location /accounts/ {
+                proxy_pass         http://accountservice:8080/accounts/;
+                proxy_redirect     off;
+                proxy_set_header   X-Real-IP $remote_addr;
+                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header   X-Forwarded-Host $server_name;
+
+            }
 
     }
 
